--- a/Grubhub/client/src/components/Menu/vendorMenu.css
+++ b/Grubhub/client/src/components/Menu/vendorMenu.css
@@ -8,8 +8,12 @@
 
 .vendorMenu {
     max-width: unset;
-    margin: 0;
-    padding: 30px 0 !important;
+    margin: 0 30px;
+    padding: 60px 0 !important;
     padding-left: 330px !important;
     padding-right: 30px !important;
+}
+
+.row {
+    padding-left: 500px;
 }
